<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mrboomba.check.Activity.NewItemActivity"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/gap"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_class"
        android:textSize="@dimen/fontsize_header"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/gap">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:textColor="@android:color/black"
            android:id="@+id/filename"
            android:hint="@string/hint"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/browse_round"
            android:background="@android:color/transparent"
            android:id="@+id/browse"
            android:layout_weight="80"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/fontsize"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/name"
            android:hint="@string/hint_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/classamnt"
            android:textSize="@dimen/fontsize"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:id="@+id/classday"
            android:hint="@string/hint_class"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/assignamnt"
            android:textSize="@dimen/fontsize"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:id="@+id/assign"
            android:hint="@string/hint_assign"/>
    </LinearLayout>
    <Button
        android:layout_margin="@dimen/gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/background"
        android:text="@string/submit"
        android:id="@+id/create"
        android:background="@color/colorAccent"/>



</LinearLayout>
